Fix reading squadron saved files with spaces.